modify [links, heading], add testmonials section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <ul>
                         <li><a href="#articles">Articles</a></li>
                         <li><a href="#gallery">Gellary</a></li>
-                        <li><a href="#">Features</a></li>
+                        <li><a href="#features">Features</a></li>
                         <li><a href="#">Other Links</a>
                             <div class="otherLinks">
                                 <div class="flex">
@@ -39,7 +39,7 @@
                                     <div class="list">
                                         <ul>
                                             <li>
-                                                <a href="#">
+                                                <a href="#testmonials">
                                                     <i class="far fa-comments"></i>
                                                     testmonials
                                                 </a>
@@ -286,7 +286,7 @@
     <!-- End Gallery Section -->
 
     <!-- Start Features -->
-    <div class="features">
+    <div class="features" id="features">
         <div class="container">
             <div class="features-content">
                 <div class="heading">
@@ -335,8 +335,139 @@
     </div>
     <!-- End Features -->
 
-    <!-- Start Video -->
-    <!-- End Video -->
+    <!-- Start Testmonials -->
+    <div class="testmonials" id="testmonials">
+        <div class="container">
+            <div class="testmonials-content">
+                <div class="heading">
+                    <h3 class="special-heading">testmonials</h3>
+                </div>
+                <div class="testmons">
+                    <div class="testmon">
+                        <div class="image">
+                            <img src="./imgs/char_1.jpg" alt="">
+                        </div>
+                        <div class="head">
+                            <h3>Mohamed Farag</h3>
+                            <p>Full Stack Developer</p>
+                        </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                        <div class="details">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, sequi voluptatum quod,
+                                dicta quidem culpa incidunt</p>
+                        </div>
+                    </div>
+                    <div class="testmon">
+                        <div class="image">
+                            <img src="./imgs/char_2.jpg" alt="">
+                        </div>
+                        <div class="head">
+                            <h3>Mohamed Ibrahim</h3>
+                            <p>Full Stack Developer</p>
+                        </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                        <div class="details">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, sequi voluptatum quod,
+                                dicta quidem culpa incidunt</p>
+                        </div>
+                    </div>
+                    <div class="testmon">
+                        <div class="image">
+                            <img src="./imgs/char_3.jpg" alt="">
+                        </div>
+                        <div class="head">
+                            <h3>Saly Nabil</h3>
+                            <p>Full Stack Developer</p>
+                        </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                        <div class="details">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, sequi voluptatum quod,
+                                dicta quidem culpa incidunt</p>
+                        </div>
+                    </div>
+                    <div class="testmon">
+                        <div class="image">
+                            <img src="./imgs/char_4.jpg" alt="">
+                        </div>
+                        <div class="head">
+                            <h3>Menna Hendawy</h3>
+                            <p>Full Stack Developer</p>
+                        </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                        <div class="details">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, sequi voluptatum quod,
+                                dicta quidem culpa incidunt</p>
+                        </div>
+                    </div>
+                    <div class="testmon">
+                        <div class="image">
+                            <img src="./imgs/char_5.jpg" alt="">
+                        </div>
+                        <div class="head">
+                            <h3>Donia Ashraf</h3>
+                            <p>Full Stack Developer</p>
+                        </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                        <div class="details">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, sequi voluptatum quod,
+                                dicta quidem culpa incidunt</p>
+                        </div>
+                    </div>
+                    <div class="testmon">
+                        <div class="image">
+                            <img src="./imgs/char_6.jpg" alt="">
+                        </div>
+                        <div class="head">
+                            <h3>Osama Mohamed</h3>
+                            <p>Full Stack Developer</p>
+                        </div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="details">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, sequi voluptatum quod,
+                                dicta quidem culpa incidunt</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Testmonials -->
 
     <!-- Start About Section -->
     <!-- End About Section -->
