--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#">
+                                                <a href="#teammembers">
                                                     <i class="far fa-user"></i>
                                                     team members
                                                 </a>
@@ -140,7 +140,7 @@
         <div class="container">
             <div class="articles-content">
                 <div class="heading">
-                    <h3 class="special-heading">articles</h3>
+                    <h3 class="special-heading special-width-2">articles</h3>
                 </div>
                 <div class="articleCards">
                     <div class="article">
@@ -469,8 +469,139 @@
     </div>
     <!-- End Testmonials -->
 
-    <!-- Start About Section -->
-    <!-- End About Section -->
+    <!-- Start Team Members Section -->
+    <div class="teammembers" id="teammembers">
+        <div class="container">
+            <div class="teammembers-content">
+                <div class="heading">
+                    <h3 class="special-heading special-width">Team Members</h3>
+                </div>
+                <div class="teams">
+                    <div class="member">
+                        <div class="image">
+                            <img src="./imgs/member_1.jpg" alt="">
+                            <div class="social">
+                                <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-linkedin-in"></i>
+                                <i class="fab fa-youtube"></i>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <h3>Name</h3>
+                            <p>simple short description</p>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="image">
+                            <img src="./imgs/member_2.jpg" alt="">
+                            <div class="social">
+                                <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-linkedin-in"></i>
+                                <i class="fab fa-youtube"></i>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <h3>Name</h3>
+                            <p>simple short description</p>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="image">
+                            <img src="./imgs/member_3.jpg" alt="">
+                            <div class="social">
+                                <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-linkedin-in"></i>
+                                <i class="fab fa-youtube"></i>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <h3>Name</h3>
+                            <p>simple short description</p>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="image">
+                            <img src="./imgs/member_4.jpg" alt="">
+                            <div class="social">
+                                <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-linkedin-in"></i>
+                                <i class="fab fa-youtube"></i>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <h3>Name</h3>
+                            <p>simple short description</p>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="image">
+                            <img src="./imgs/member_5.jpg" alt="">
+                            <div class="social">
+                                <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-linkedin-in"></i>
+                                <i class="fab fa-youtube"></i>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <h3>Name</h3>
+                            <p>simple short description</p>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="image">
+                            <img src="./imgs/member_6.jpg" alt="">
+                            <div class="social">
+                                <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-linkedin-in"></i>
+                                <i class="fab fa-youtube"></i>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <h3>Name</h3>
+                            <p>simple short description</p>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="image">
+                            <img src="./imgs/member_7.jpg" alt="">
+                            <div class="social">
+                                <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-linkedin-in"></i>
+                                <i class="fab fa-youtube"></i>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <h3>Name</h3>
+                            <p>simple short description</p>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="image">
+                            <img src="./imgs/member_8.jpg" alt="">
+                            <div class="social">
+                                <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-linkedin-in"></i>
+                                <i class="fab fa-youtube"></i>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <h3>Name</h3>
+                            <p>simple short description</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Team Members Section -->
 
     <!-- Start Numbers Section -->
     <!-- End Numbers Section -->
