--- a/index.html
+++ b/index.html
@@ -603,8 +603,80 @@
     </div>
     <!-- End Team Members Section -->
 
-    <!-- Start Numbers Section -->
-    <!-- End Numbers Section -->
+    <!-- Start Services Section -->
+    <div class="services">
+        <div class="container">
+            <div class="serv-content">
+                <div class="heading">
+                    <h3 class="special-heading">services</h3>
+                </div>
+                <div class="srvs">
+                    <div class="serv">
+                        <div class="sec-1">
+                            <i class="fas fa-user-secret"></i>
+                            <h3>security</h3>
+                        </div>
+                        <div class="sec-2">
+                            <div class="count-section"></div>
+                            <div class="details">details</div>
+                        </div>
+                    </div>
+                    <div class="serv">
+                        <div class="sec-1">
+                            <i class="fas fa-tools"></i>
+                            <h3>fixing issues</h3>
+                        </div>
+                        <div class="sec-2">
+                            <div class="count-section"></div>
+                            <div class="details">details</div>
+                        </div>
+                    </div>
+                    <div class="serv">
+                        <div class="sec-1">
+                            <i class="fas fa-map-marked-alt"></i>
+                            <h3>location</h3>
+                        </div>
+                        <div class="sec-2">
+                            <div class="count-section"></div>
+                            <div class="details">details</div>
+                        </div>
+                    </div>
+                    <div class="serv">
+                        <div class="sec-1">
+                            <i class="fas fa-file-code"></i>
+                            <h3>coding</h3>
+                        </div>
+                        <div class="sec-2">
+                            <div class="count-section"></div>
+                            <div class="details">details</div>
+                        </div>
+                    </div>
+                    <div class="serv">
+                        <div class="sec-1">
+                            <i class="fas fa-palette"></i>
+                            <h3>design</h3>
+                        </div>
+                        <div class="sec-2">
+                            <div class="count-section"></div>
+                            <div class="details">details</div>
+                        </div>
+                    </div>
+                    <div class="serv">
+                        <div class="sec-1">
+                            <i class="fas fa-comment-dollar"></i>
+                            <h3>marketing</h3>
+                        </div>
+                        <div class="sec-2">
+                            <div class="count-section"></div>
+                            <div class="details">details</div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Services Section -->
 
     <!-- Start Skills Section -->
     <!-- End Skills Section -->
