adding "skills section"

--- a/index.html
+++ b/index.html
@@ -679,6 +679,32 @@
     <!-- End Services Section -->
 
     <!-- Start Skills Section -->
+    <div class="skills">
+        <div class="container">
+            <div class="skills-content">
+                <div class="heading">
+                    <h3 class="special-heading">our skills</h3>
+                </div>
+                <div class="skill-content">
+                    <img src="./imgs/mac.png" alt="" width="320px">
+                    <div class="bars">
+                        <div class="bar">
+                            <div class="sub-bar"></div>
+                        </div>
+                        <div class="bar">
+                            <div class="sub-bar"></div>
+                        </div>
+                        <div class="bar">
+                            <div class="sub-bar"></div>
+                        </div>
+                        <div class="bar">
+                            <div class="sub-bar"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- End Skills Section -->
 
     <!-- Start Contact Section -->
