adding "how it work section"

--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#">
+                                                <a href="#servs">
                                                     <i class="fas fa-clipboard-list"></i>
                                                     services
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#">
+                                                <a href="#skills">
                                                     <i class="far fa-check-square"></i>
                                                     our skills
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#">
+                                                <a href="#howitwork">
                                                     <i class="far fa-clipboard"></i>
                                                     how it works
                                                 </a>
@@ -604,7 +604,7 @@
     <!-- End Team Members Section -->
 
     <!-- Start Services Section -->
-    <div class="services">
+    <div class="services" id="servs">
         <div class="container">
             <div class="serv-content">
                 <div class="heading">
@@ -679,7 +679,7 @@
     <!-- End Services Section -->
 
     <!-- Start Skills Section -->
-    <div class="skills">
+    <div class="skills" id="skills">
         <div class="container">
             <div class="skills-content">
                 <div class="heading">
@@ -707,8 +707,46 @@
     </div>
     <!-- End Skills Section -->
 
-    <!-- Start Contact Section -->
-    <!-- End Contact Section -->
+    <!-- Start How It Works Section -->
+    <div class="howitwork" id="howitwork">
+        <div class="container">
+            <div class="work-content">
+                <div class="heading">
+                    <h3 class="special-heading">how it work</h3>
+                </div>
+                <div class="main-work">
+                    <img src="./imgs/howitwork.png" width="400px" alt="">
+                    <div class="works">
+                        <div class="work">
+                            <img src="./imgs/businessAnalysis.png" width="50px" alt="">
+                            <div class="text">
+                                <h3>business analysis</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, esse omnis pariatur
+                                    molestiae possimus excepturi molestias voluptate error.</p>
+                            </div>
+                        </div>
+                        <div class="work">
+                            <img src="./imgs/architecture.png" width="50px" alt="">
+                            <div class="text">
+                                <h3>architecture</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, esse omnis pariatur
+                                    molestiae possimus excepturi molestias voluptate error.</p>
+                            </div>
+                        </div>
+                        <div class="work">
+                            <img src="./imgs/development.png" width="50px" alt="">
+                            <div class="text">
+                                <h3>Developement</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, esse omnis pariatur
+                                    molestiae possimus excepturi molestias voluptate error.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End How It Works Section -->
 
     <!-- Start Pricing Section -->
     <!-- End Pricing Section -->
