adding "latest events and pricing plans sections"

--- a/index.html
+++ b/index.html
@@ -748,11 +748,139 @@
     </div>
     <!-- End How It Works Section -->
 
-    <!-- Start Pricing Section -->
-    <!-- End Pricing Section -->
+    <!-- Start Events Section -->
+    <div class="events">
+        <div class="container">
+            <div class="heading">
+                <h3 class="special-heading">latest events</h3>
+            </div>
+            <div class="events-content">
+                <div class="calender">
+                    <img src="./imgs/events.svg" alt="">
+                    <div class="calender-content">
+                        <div class="date">
+                            <div class="element">
+                                <div class="num">15</div>
+                                <div class="text">days</div>
+                            </div>
+                            <div class="element">
+                                <div class="num">08</div>
+                                <div class="text">hours</div>
+                            </div>
+                            <div class="element">
+                                <div class="num">45</div>
+                                <div class="text">minutes</div>
+                            </div>
+                            <div class="element">
+                                <div class="num">55</div>
+                                <div class="text">seconds</div>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <h3>tech masters events 2021</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus cum quasi nulla ducimus
+                                est, maiores, qui ipsam consectetur, a nemo libero dolorum sed</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="subscribe">
+                    <input type="text" placeholder="Enter Your Email">
+                    <div class="button">subscribe</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Events Section -->
 
-    <!-- Start Subscribe Section -->
-    <!-- End Subscribe Section -->
+    <!-- Start pricing Section -->
+    <div class="pricing">
+        <div class="container">
+            <div class="heading">
+                <h3 class="special-heading">pricing plans</h3>
+            </div>
+            <div class="pricing-content">
+                <div class="plan">
+                    <div class="sec-1">
+                        <h3>basic</h3>
+                        <div class="image"><img src="./imgs/basic.png" width="70px" alt=""></div>
+                        <p>$15</p>
+                        <p>per month</p>
+                        <div class="feat">
+                            <i class="fas fa-check"></i>10GB HDD Space
+                        </div>
+                    </div>
+                    <div class="sec-2">
+                        <div class="feat">
+                            <i class="fas fa-check"></i>5 Email Addresses
+                        </div>
+                        <div class="feat">
+                            <i class="fas fa-check"></i>5 Subdomains
+                        </div>
+                        <div class="feat">
+                            <i class="fas fa-check"></i>4 Databases
+                        </div>
+                        <div class="feat">
+                            <i class="fas fa-check"></i>Basic Support
+                        </div>
+                        <div class="planBtn">choose plan</div>
+                    </div>
+                </div>
+                <div class="plan">
+                    <div class="sec-1">
+                        <h3>advanced</h3>
+                        <div class="image"><img src="./imgs/advanced.png" width="70px" alt=""></div>
+                        <p>$25</p>
+                        <p>per month</p>
+                        <div class="feat">
+                            <i class="fas fa-check"></i>20GB HDD Space
+                        </div>
+                    </div>
+                    <div class="sec-2">
+                        <div class="feat">
+                            <i class="fas fa-check"></i>10 Email Addresses
+                        </div>
+                        <div class="feat">
+                            <i class="fas fa-check"></i>5 Subdomains
+                        </div>
+                        <div class="feat">
+                            <i class="fas fa-check"></i>8 Databases
+                        </div>
+                        <div class="feat">
+                            <i class="fas fa-check"></i>Advanced Support
+                        </div>
+                        <div class="planBtn">choose plan</div>
+                    </div>
+                </div>
+                <div class="plan">
+                    <div class="sec-1">
+                        <h3>professional</h3>
+                        <div class="image"><img src="./imgs/professional.png" width="70px" alt=""></div>
+                        <p>$45</p>
+                        <p>per month</p>
+                        <div class="feat">
+                            <i class="fas fa-check"></i>50GB HDD Space
+                        </div>
+                    </div>
+                    <div class="sec-2">
+                        <div class="feat">
+                            <i class="fas fa-check"></i>20 Email Addresses
+                        </div>
+                        <div class="feat">
+                            <i class="fas fa-check"></i>10 Subdomains &nbsp;;
+                        </div>
+                        <div class="feat">
+                            <i class="fas fa-check"></i>20 Databases
+                        </div>
+                        <div class="feat">
+                            <i class="fas fa-check"></i>Professional Support
+                        </div>
+                        <div class="planBtn">choose plan</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End pricing Section -->
 
     <!-- Start Contact Section -->
     <!-- End Contact Section -->
