--- a/index.html
+++ b/index.html
@@ -882,10 +882,183 @@
     </div>
     <!-- End pricing Section -->
 
-    <!-- Start Contact Section -->
-    <!-- End Contact Section -->
+    <!-- Start Top videos Section -->
+    <div class="topvideo">
+        <div class="container">
+            <div class="heading">
+                <h3 class="special-heading">top videos</h3>
+            </div>
+            <div class="videos-content">
+                <div class="video-list">
+                    <div class="videos">
+                        <div class="heading">
+                            <h3>Top videos</h3>
+                            <i class="fas fa-random"></i>
+                        </div>
+                        <div class="video">
+                            <h3>how to create subdomain</h3>
+                            <p>05:18</p>
+                        </div>
+                        <div class="video">
+                            <h3>playing with the dns</h3>
+                            <p>05:05</p>
+                        </div>
+                        <div class="video">
+                            <h3>everything about the virtual hosts</h3>
+                            <p>15:08</p>
+                        </div>
+                        <div class="video">
+                            <h3>how to monitor your website</h3>
+                            <p>07:01</p>
+                        </div>
+                        <div class="video">
+                            <h3>uncharted beating the last boss</h3>
+                            <p>13:00</p>
+                        </div>
+                        <div class="video">
+                            <h3>video test</h3>
+                            <p>40:02</p>
+                        </div>
+                        <div class="video">
+                            <h3>video name</h3>
+                            <p>28:37</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="video">
+                    <div class="image"><img src="./imgs/monsters.png" alt=""></div>
+                    <div>everything about the virtual hosts</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Top videos Section -->
+
+    <!-- start Stats Section -->
+    <div class="stats">
+        <div class="container">
+            <div class="stats-content">
+                <h3 class="heading">our awesome stats</h3>
+                <div class="statsDivs">
+                    <div class="stat">
+                        <i class="fas fa-user"></i>
+                        <p>300</p>
+                        <p>clients</p>
+                    </div>
+                    <div class="stat">
+                        <i class="fas fa-code"></i>
+                        <p>400</p>
+                        <p>projects</p>
+                    </div>
+                    <div class="stat">
+                        <i class="fas fa-globe-asia"></i>
+                        <p>12</p>
+                        <p>countries</p>
+                    </div>
+                    <div class="stat">
+                        <i class="far fa-money-bill-alt"></i>
+                        <p>500k</p>
+                        <p>money</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Stats Section -->
+
+    <!-- Start Discount Section -->
+    <div class="discount">
+        <div class="main-container">
+            <div class="sec-1">
+                <h3 class="heading">we have a discount</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem non, eligendi et perspiciatis,
+                    magnam exercitationem delectus sit ducimus quos architecto voluptas vitae! Sequi magnam
+                    repellendus aut adipisci, autem laboriosam quod?</p>
+                <img src="./imgs/discounts.png" width="200px" alt="">
+            </div>
+            <div class="sec-2">
+                <h3 class="heading">request a discount</h3>
+                <form action="">
+                    <div class="name">
+                        <input type="text" class="name" placeholder="Your Name">
+                    </div>
+                    <div class="email">
+                        <input type="email" class="email" placeholder="Your Email">
+                    </div>
+                    <div class="phone">
+                        <input type="text" class="phone" placeholder="Your Phone">
+                    </div>
+                    <div class="message">
+                        <textarea name="msg" id="" cols="30" rows="10"
+                            placeholder="Tell Us About Your Needs"></textarea>
+                    </div>
+                    <div class="button">
+                        <button>Send</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- End Discount Section -->
 
     <!-- Start Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer">
+                    <div class="social">
+                        <h3 class="logo">elzero</h3>
+                        <div class="icons">
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-youtube"></i>
+                        </div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non ab explicabo exercitationem
+                            excepturi quas.</p>
+                    </div>
+                    <div class="links">
+                        <ul>
+                            <li><a href="">important link 1</a></li>
+                            <li><a href="">important link 2</a></li>
+                            <li><a href="">important link 3</a></li>
+                            <li><a href="">important link 4</a></li>
+                            <li><a href="">important link 5</a></li>
+                        </ul>
+                    </div>
+                    <div class="contact">
+                        <div>
+                            <i class="fas fa-map-marker-alt"></i>
+                            <p>egypt, giza, inside the sphinx room number 220</p>
+                        </div>
+                        <div>
+                            <i class="far fa-clock"></i>
+                            <p>business hours from 10:00 to 18:00</p>
+                        </div>
+                        <div class="phone">
+                            <i class="fas fa-phone-volume"></i>
+                            <div class="phones">
+                                <p>+201287483874</p>
+                                <p>+201082837333</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="shortcut">
+                        <div class="images">
+                            <a href="#gallery"><img width="55px" src="./imgs/gall_1.jpg" alt=""></a>
+                            <a href="#gallery"><img width="55px" src="./imgs/gall_2.jpg" alt=""></a>
+                            <a href="#gallery"><img width="55px" src="./imgs/gall_3.jpg" alt=""></a>
+                            <a href="#gallery"><img width="55px" src="./imgs/gall_4.jpg" alt=""></a>
+                            <a href="#gallery"><img width="55px" src="./imgs/gall_5.jpg" alt=""></a>
+                            <a href="#gallery"><img width="55px" src="./imgs/gall_6.jpg" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="endFooter">
+            made with &lt;3 by elzero
+        </div>
+    </footer>
     <!-- End Footer -->
 </body>
 
