--- a/index.html
+++ b/index.html
@@ -73,31 +73,31 @@
                                     <div class="list">
                                         <ul>
                                             <li>
-                                                <a href="#">
+                                                <a href="#events">
                                                     <i class="far fa-calendar-alt"></i>
                                                     events
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#">
+                                                <a href="#pricing">
                                                     <i class="fas fa-th-list"></i>
                                                     pricing plans
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#">
+                                                <a href="#videos">
                                                     <i class="far fa-play-circle"></i>
                                                     top videos
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#">
+                                                <a href="#stats">
                                                     <i class="far fa-chart-bar"></i>
                                                     stats
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#">
+                                                <a href="#discount">
                                                     <i class="fas fa-percentage"></i>
                                                     request a discount
                                                 </a>
@@ -749,7 +749,7 @@
     <!-- End How It Works Section -->
 
     <!-- Start Events Section -->
-    <div class="events">
+    <div class="events" id="events">
         <div class="container">
             <div class="heading">
                 <h3 class="special-heading">latest events</h3>
@@ -793,7 +793,7 @@
     <!-- End Events Section -->
 
     <!-- Start pricing Section -->
-    <div class="pricing">
+    <div class="pricing" id="pricing">
         <div class="container">
             <div class="heading">
                 <h3 class="special-heading">pricing plans</h3>
@@ -883,7 +883,7 @@
     <!-- End pricing Section -->
 
     <!-- Start Top videos Section -->
-    <div class="topvideo">
+    <div class="topvideo" id="videos">
         <div class="container">
             <div class="heading">
                 <h3 class="special-heading">top videos</h3>
@@ -935,7 +935,7 @@
     <!-- End Top videos Section -->
 
     <!-- start Stats Section -->
-    <div class="stats">
+    <div class="stats" id="stats">
         <div class="container">
             <div class="stats-content">
                 <h3 class="heading">our awesome stats</h3>
@@ -967,7 +967,7 @@
     <!-- End Stats Section -->
 
     <!-- Start Discount Section -->
-    <div class="discount">
+    <div class="discount" id="discount">
         <div class="main-container">
             <div class="sec-1">
                 <h3 class="heading">we have a discount</h3>
